# mp3dec

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  decoder.js  index.js  main.js  mp3dec_static_1.38.45.js  package-lock.json  package.json  player.html  projectConfig.cmake  runbuild.sh  valgrind_suppressions.txt  wasm.js  worker.js
.github/workflows/: cibuild.yml
cmake/: config.cmake  cxxflags.cmake  library.cmake  strip.cmake
extProjects/: CMakeLists.txt
extProjects/gcovr/: CMakeLists.txt
extProjects/gtest/: CMakeLists.txt
extProjects/valgrind/: CMakeLists.txt  valgrind_suppressions.txt
src/commands/: index.js
src/commands/commands/: decode.js  x64build.js
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/app/: CMakeLists.txt  file.cpp  main.cpp  parse.cpp  parse.h  stream.cpp
src/cpp/lib/: CMakeLists.txt  lib_wrapper.cpp
src/cpp/lib/codec/: CMakeLists.txt
src/cpp/lib/codec/common/: CMakeLists.txt  hufinfo.h  huftree.cpp  huftree.h
src/cpp/lib/codec/mp3/: CMakeLists.txt  brate.cpp  brate.h  common.cpp  hufdec.cpp  huffman.cpp  hufl3.cpp  huftbl.cpp  imdct2.cpp  layer.h  layer1.cpp  layer2.cpp  layer3.cpp  mp3.cpp  mp3.h  mp3_q.cpp  mp3_q.h  mp3def.h  mp3info.h  mp3is_q.cpp  mp3mix.cpp  mp3wind.cpp  mpheader.cpp  mpheader.h  mstream.cpp  mstream.h  param.h  sfb.cpp  sfb.h  side.h  stereo.cpp  synfilt.cpp  synfilt2.cpp  synfilt3.cpp  synfilt4.cpp  syntbl.cpp
src/cpp/lib/core/: CMakeLists.txt  bits.cpp  bitsbuffer.cpp  bitsring.cpp  iobuf.cpp  log.cpp  wave.cpp
src/cpp/lib/core/common/: CMakeLists.txt  bits.cpp  eqband.cpp  membuffer.cpp  meta.cpp
src/cpp/lib/core/io/: CMakeLists.txt  console.cpp  iobuf.cpp  log.cpp  uci.cpp  wave.cpp
src/cpp/lib/export/: CMakeLists.txt  decoder.cpp  decoder.h
src/cpp/lib/include/core/: bits.h  bitsbuffer.h  bitsring.h  defines.h  eqband.h  errmsg.h  iobuf.h  log.h  membuffer.h  meta.h  throw.h  wave.h
src/cpp/lib/include/core/io/: console.h  iobuf.h  log.h  uci.h  wave.h
src/cpp/lib/include/interface/: attributes.h  bitbuffer.h  cdecoder.h  console.h  decoder.h  defs.h  eqband.h  stream.h
src/cpp/lib/mcu/: CMakeLists.txt  consoledecoder.cpp  consoledecoder.h  mp3dec.cpp  mp3dec.h  mp3decconsole.cpp  mp3decconsole.h  streamable.cpp
src/cpp/lib/mcu/console/: mp3decconsole.cpp  mp3decconsole.h
src/cpp/lib/mcu/decoders/: mp3dec.cpp  mp3dec.h
src/cpp/tests/: CMakeLists.txt  test_lib.cpp
src/cpp/tests/core/: test_bits.cpp  test_bitsring.cpp  test_filebuf.cpp  test_membuffer.cpp  test_utils.cpp  test_utils.h
src/cpp/tests/mcu/: test_streamable.cpp
src/js/: decoder.js  import.js  worker.js
src/nodecpp/: main.cpp
